--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 pydantic==2.5.0
-numpy==1.24.3
-pandas==2.0.3
+numpy>=1.26.0
+pandas>=2.0.3
+scipy>=1.11.0
 python-multipart==0.0.6
 pytest==7.4.3
 httpx==0.25.2
-flask==2.3.2
-flask-cors==4.0.0
+sqlalchemy>=2.0.0
